--- a/final_project.qmd
+++ b/final_project.qmd
@@ -1,5 +1,7 @@
 ---
-title: "final_project"
+title: "stat 184 final_project"
+author: 'names'
+date: now
 ---
 
 ## Quarto
@@ -19,21 +21,11 @@ table_20
 
 ### Import required packages
 
-```{r}
-library(tidyverse)
-library(rvest)
+```{ddd}
 
 ```
 
 ```{r}
 
-for (i in 0:15) {
-  result <- 1960 + 4 * i
-  str <-  paste0("https://www.presidency.ucsb.edu/statistics/elections/",result)
-table <- read_html(str) %>%
-  html_element(css = 'table') %>%
-  html_table()
 
-assign(paste0("table_", result), table)
-}
 ```
