--- a/final_project.qmd
+++ b/final_project.qmd
@@ -6,7 +6,7 @@ date: now
 
 ## Quarto
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+Some difficulty in loading a
 
 ```{r}
 library(tidyverse)
